--- a/03_bs_alert.html
+++ b/03_bs_alert.html
@@ -1,16 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
-    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!-- kullanıcıya farklı renklerde bilgilendirme mesajları veririz. -->
+    <!-- success, primary, secondary vs bs tanımlı renk kodlarıdır. -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <div class="alert alert-success" role="alert">
+      A simple success alert—check it out!
+    </div>
+
+    <button type="button" class="btn btn-outline-primary">Primary</button>
+
+    <button type="button" class="btn btn-primary">Primary</button>
+
+    <div class="d-grid gap-2">
+      <button class="btn btn-primary" type="button">Button</button>
+      <button class="btn btn-primary" type="button">Button</button>
+    </div>
+
+    <!-- vertical button group -->
+
+    <div class="btn-group-vertical">
+      <button class="btn btn-primary" type="button">Button 1</button>
+      <button class="btn btn-danger" type="button">Button 2</button>
+    </div>
+
+    <!-- button-group -->
+
+    <div class="btn-group">
+      <button class="btn btn-primary" type="button">Button 1</button>
+      <button class="btn btn-danger" type="button">Button 2</button>
+    </div>
+
+    <!-- link ise bir sayfadan başka bir sayfaya yönledirmek için kullanılır. -->
+    <a href="/01_bootstrap_grid.html" class="btn btn-success">Goto Cart</a>
+    <!-- butonu css ile link gibi gösterdik. Button tıklandığında js kodu çalıştırır. -->
+    <button onclick="alert('Tıklandı')" class="btn btn-link">
+      Show Message
+    </button>
+
+    <div class="row">
+      <div class="col">
+        <!--  card ile liste kullanımı örnek -->
+
+        <div class="card" style="width: 18rem">
+          <div class="card-header">Featured</div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col">
+        <!-- bs-card -->
+
+        <div class="card" style="width: 18rem">
+          <img src="/assets/image/js.png" class="card-img-bottom" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <div
+              class="card text-white bg-primary mb-3"
+              style="max-width: 18rem"
+            >
+              <div class="card-header">Header</div>
+              <div class="card-body">
+                <h5 class="card-title">Primary card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- butonları gruplama için 2 adet class var button-group ve button-group-vertical -->
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
